# delux-agent

./: .gitattributes  .gitignore  DELUX_CORE_ADN.md  DELUX_PROJECT_MEMORY.md  MANIFEST.in  README.md  context_eval.py  install.ps1  install.sh  opencodememory.md  pyproject.toml  rehumanize_model.py  setup.py
.agent/workflows/: graphify.md
completions/: _delux  delux.bash  delux.fish
dataset_glaive/: .gitattributes  README.md
dataset_hermes/: README.md
dataset_multiturn/: README.md
delux_agent/: __init__.py  agent.py  browser.py  cli.py  computer_use.py  config.py  console.py  contextualizer.py  cron.py  dataset_rag.py  ddg_proxy.py  ddg_proxy_server.py  experience.py  i18n.py  ide.py  indexer.py  kanban.py  llm.py  mcp_store.py  plan_executor.py  rag.py  setup.py  sidebar.py  small_model.py  store.py  subagent.py  system_info.py  templates.py  tools.py  training.py  vision.py
delux_agent/gateway/: __init__.py  gateway.py
delux_agent/ide/: __init__.py  ide.py  sidebar.py
docs/: README.md  fine-tuning.md
fish/: delux.fish
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
memory/: memory.md
scripts/: mock_llm.py
skills/: README.md
tests/: test_all_ctx_models.py  test_both_models.py  test_ctx_4models.py  test_ctx_comparison.py  test_ctx_final.py  test_ctx_v2.py  test_dolphin.py  test_dolphin_vs_qwen.py  test_edit_file.py  test_gemma_vs_qwen7b.py  test_live.py  test_local_comparison.py  test_plan_executor.py  test_training.py
training/: convert_datadelux.py  datadelux.jsonl  expert_library.json  self_learned_experts.json  training_examples.md
(+109 files in other folders)
